Add (optional) decoration shadows
svn path=/trunk/playground/artwork/smaragd/; revision=1137901

--- a/src/config/kwin_smaragd_dialog.ui
+++ b/src/config/kwin_smaragd_dialog.ui
@@ -18,6 +18,13 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QCheckBox" name="cm_UseKWinShadows">
+     <property name="text">
+      <string>Use KWin shadow effect settings</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
