Disable Shadows tab when KWin shadows are used
svn path=/trunk/playground/artwork/smaragd/; revision=1159868

--- a/src/config/kwin_smaragd_dialog.ui
+++ b/src/config/kwin_smaragd_dialog.ui
@@ -12,7 +12,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTabWidget" name="tabWidget">
+    <widget class="KTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -226,6 +226,11 @@
    <class>KColorButton</class>
    <extends>QPushButton</extends>
    <header>kcolorbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KTabWidget</class>
+   <extends>QTabWidget</extends>
+   <header>ktabwidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
